--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="container">
         <h2>Registration Form</h2>
-        <form id="registrationForm" action="succes.html" method="post" onsubmit="return validateForm()">
+        <form id="registrationForm" action="index1.html" method="post" onsubmit="return validateForm()">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <div id="usernameError" class="error"></div>
